test/zinc_source/compile_errors/control_flow/02_missing_else_non_unit.zn
// expected-error: if-expression without else must resolve to unit or diverge

fn main() {
    debug = true
    value = if debug {
        1
    }
}
